Fix inactive canvas still being visible in the background

--- a/static/style/less/main.less
+++ b/static/style/less/main.less
@@ -33,6 +33,9 @@ canvas, #canvas-container {
 
 canvas {
   position: absolute;
+  &.inactive {
+    display: none;
+  }
 }
 
 button, input {
